# simasciitrain-florian-berger

./: AbstractLocomotive.cpp  AbstractLocomotive.h  AbstractWagon.cpp  AbstractWagon.h  CMakeLists.txt  ElectricLocomotive.cpp  ElectricLocomotive.h  FreightWagon.cpp  FreightWagon.h  GasolineLocomotive.cpp  GasolineLocomotive.h  ITrain.h  PassengerWagon.cpp  PassengerWagon.h  README.md  Train.cpp  Train.h  TypeLocomotive.cpp  TypeLocomotive.h  TypeWagon.cpp  TypeWagon.h  UtilityWagon.cpp  UtilityWagon.h  Wagons.cpp  Wagons.h  main.cpp
